--- a/lesson-7/01-auth/package.json
+++ b/lesson-7/01-auth/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "lesson-7",
+  "name": "01-auth",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start": "node -r dotenv/config index.js",
+    "dev": "nodemon -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.1.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "dotenv": "^16.4.5"
   }
 }
